--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,5 +13,21 @@ h1 {
 
 .start-btn {
     text-align: center;
+    background-color: aquamarine;
     
+}
+
+.countdown {
+    text-align: center;
+    padding: 70px 0;
+    background-color: aquamarine;
+    color:red ;
+        
+}
+h2 {
+    text-align: center;
+    font-size: 33px;
+}
+.choices {
+    text-align: center;
 }
